--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -3,5 +3,8 @@
 	<div class="field">
 		<%= f.text_area :content, placeholder: "Compose new micropost..." %>
 	</div>
+	<span id="micropost_counter">
+		<bold id="counter">140</bold> characters remaining
+	</span>
 	<%= f.submit "Post", class: "btn btn-large btn-primary" %>
 <% end %>
