Add email validity confirmation

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<% if signed_in? %>
+<% if signed_in? && confirmed? %>
 	<div class = "row">
 		<aside class="span4">
 			<section>
@@ -20,13 +20,21 @@
 	<div class="center hero-unit">
 		<h1>Welcome to the Sample App</h1>
 
-		<h2>
-			This is the home page for the 
-			<a href="http://railstutorial.org/">Ruby on Rails Tutorial</a> 
-			sample apllication.
-		</h2>
+		<% if signed_in? && !confirmed? %>
+			<h2>
+				Finish the signup process by clicking the link in your email.  
+				If you haven't yet recieved your confirmation email, you can check or change your email by reviewing your
+				<%= link_to "settings", edit_user_path(current_user) %>.
+			</h2>
+		<% else %>
+			<h2>
+				This is the home page for the 
+				<a href="http://railstutorial.org/">Ruby on Rails Tutorial</a> 
+				sample apllication.
+			</h2>
 
-		<%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+			<%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+		<% end %>
 	</div>
 
 	<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
