--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,13 +7,17 @@
 						<li><%= link_to "Home",		root_path %></li>
 						<li><%= link_to "Help",		help_path %></li>
 						<% if signed_in? %>
-							<li><%= link_to "Users", users_path %></li>
+							<% if confirmed? %>
+								<li><%= link_to "Users", users_path %></li>
+							<% end %>
 							<li id="fat-menu" class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 									Account <b class="caret"></b>
 								</a>
 								<ul class="dropdown-menu">
-									<li><%= link_to "Profile", current_user %></li>
+									<% if confirmed? %>
+										<li><%= link_to "Profile", current_user %></li>
+									<% end %>
 									<li><%= link_to "Settings", edit_user_path(current_user) %></li>
 									<li class="divider"></li>
 									<li>
